--- a/phone.css
+++ b/phone.css
@@ -31,7 +31,7 @@ ul li a{    /* display: block; */
 }
 #firstsec::before{
     content: "";
-    background: url(../img/fh1.jpg);
+    background: url('img/fh1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
