--- a/css/phone.css
+++ b/css/phone.css
@@ -1,4 +1,13 @@
+
+html
+{
+        scroll-behavior: smooth;
+
+}
+
+
 /* navbar--------------------------------- */
+
 #logo img
 {
     display:block;
@@ -55,7 +64,7 @@ ul li a{
 {
     display: flex;
     flex-direction: column;
-    margin-top: -60px;
+    margin-top: -40px;
 
     text-align: center;
     width:100vw;
@@ -111,9 +120,9 @@ ul li a{
 }
 #footer
 {
-    font-size: 14px;
+    font-size: 13px;
     width: 100vw;
-    height: 45px;
+    height: 55px;
     background-color: rgb(122, 140, 137);
 
     justify-content: center;
