--- a/css/phone.css
+++ b/css/phone.css
@@ -51,6 +51,8 @@ ul li a{
     /* padding: 82px 0px; */
     z-index: -1;
     opacity: 0.8;
+         border-bottom-right-radius: 30px;
+    border-bottom-left-radius: 30px;
     margin-top:-180px;
 }
 #firstsec
@@ -64,7 +66,7 @@ ul li a{
 {
     display: flex;
     flex-direction: column;
-    margin-top: -40px;
+    margin-top: -50px;
 
     text-align: center;
     width:100vw;
@@ -122,7 +124,7 @@ ul li a{
 {
     font-size: 13px;
     width: 100vw;
-    height: 55px;
+    height: 40px;
     background-color: rgb(122, 140, 137);
 
     justify-content: center;
