--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    outline:'none';
 }
 
 
@@ -102,6 +103,9 @@ ul li a:active {
     height: 100%;
     width: 100%;
     z-index: -1;
+             border-bottom-right-radius: 30px;
+    border-bottom-left-radius: 30px;
+
     margin-top: 0;
 }
 
